<resources>
    <string name="app_name">liangwanandroid</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="register">[注册]</string>
    <string name="username_hint">用户名:</string>
    <string name="pwd_hint">密码:</string>
    <string name="repeat_pwd_hint">重复输入密码:</string>
    <string name="login_btn_hint">登录</string>
    <string name="register_btn_hint">注册</string>

    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="loading_image">loading加载</string>
    <string name="login_txt_hint">[登录]</string>
    <string name="loginout">退出登录</string>


</resources>
